--- a/app/src/main/res/layout/breakfast_items.xml
+++ b/app/src/main/res/layout/breakfast_items.xml
@@ -4,25 +4,28 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="wrap_content"
     app:cardElevation="4dp"
-    android:id="@+id/cvMenuItem"
-    android:layout_marginBottom="8dp">
+    android:id="@+id/cvbreakfastitem"
+    android:layout_marginBottom="8dp"
+    android:layout_marginRight="8dp"
+    android:layout_marginLeft="8dp"
+    android:layout_marginTop="8dp">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         >
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/menu_image"
-        android:src="@drawable/raspberry"
-        android:scaleType="centerCrop"/>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/breakfast_image"
+            android:src="@drawable/breakfast"
+            android:scaleType="centerCrop"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/menu_name"
-            android:text="Name of Menu"
+            android:id="@+id/breakfast_name"
+            android:text=" Food Name"
             android:textColor="@color/Black"
             android:background="@color/GreenYellow"
             android:textSize="20sp"
