--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -10,19 +10,23 @@
             android:title="Dashboard" />
         <item
             android:id="@+id/nav_menu"
-            android:icon="@drawable/ic_restaurant_menu_black_24dp"
+            android:icon="@drawable/menunav"
             android:title="Menu" />
     <item
         android:id="@+id/nav_cart"
-        android:icon="@drawable/ic_shopping_cart_black_24dp"
+        android:icon="@drawable/cart"
         android:title="Cart" />
     <item
         android:id="@+id/nav_orders"
-        android:icon="@drawable/ic_access_time_black_24dp"
+        android:icon="@drawable/order"
         android:title="Orders" />
+        <item
+            android:id="@+id/nav_profile"
+            android:icon="@drawable/profile"
+            android:title="Profile" />
     <item
         android:id="@+id/nav_logout"
-        android:icon="@drawable/ic_exit_to_app_black_24dp"
+        android:icon="@drawable/exit"
         android:title="Sign Out" />
 
     </group>
