--- a/app/src/main/res/layout/activity_user_dashboard.xml
+++ b/app/src/main/res/layout/activity_user_dashboard.xml
@@ -19,34 +19,10 @@
 
         <LinearLayout
             android:id="@+id/view"
-            android:layout_width="match_parent"
+            android:layout_width="410dp"
             android:layout_height="130dp"
-            android:background="@color/Green"
+            android:background="@drawable/dashlogo"
             android:orientation="vertical">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-                <androidx.appcompat.widget.Toolbar
-                    android:id="@+id/toolbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    android:background="?attr/colorPrimary"
-                    app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_marginLeft="55dp"
-                    android:layout_marginBottom="14dp"
-                    android:gravity="center"
-                    android:text=" User Dashboard"
-                    android:textColor="#FFFFFF"
-                    android:textSize="24sp" />
-
-            </RelativeLayout>
-
 
         </LinearLayout>
 
@@ -73,12 +49,12 @@
 
                     <ImageView
                         android:id="@+id/menuicon"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
                         android:layout_gravity="center"
                         android:scaleType="center"
-                        android:src="@drawable/ic_restaurant_menu_black_24dp" />
+                        android:src="@drawable/menu" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -107,10 +83,10 @@
 
                     <ImageView
                         android:id="@+id/ordersicon"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="122dp"
+                        android:layout_height="108dp"
                         android:layout_centerInParent="true"
-                        android:src="@drawable/ic_access_time_black_24dp" />
+                        android:src="@drawable/order" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -150,10 +126,10 @@
 
                     <ImageView
                         android:id="@+id/profileicon"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="122dp"
+                        android:layout_height="108dp"
                         android:layout_centerInParent="true"
-                        android:src="@drawable/ic_person_black_24dp" />
+                        android:src="@drawable/profile" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -181,10 +157,10 @@
 
                     <ImageView
                         android:id="@+id/notificationsicon"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="122dp"
+                        android:layout_height="108dp"
                         android:layout_centerInParent="true"
-                        android:src="@drawable/ic_notifications_black_24dp" />
+                        android:src="@drawable/notification" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -214,7 +190,6 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/menuplate"
                 app:cardCornerRadius="2dp"
                 app:cardElevation="0dp">
 
@@ -222,12 +197,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-<!--                    <ImageView-->
-<!--                        android:id="@+id/abouticon"-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:layout_centerInParent="true"-->
-<!--                        android:src="@drawable/ic_info_black_24dp" />-->
+                    <ImageView
+                        android:id="@+id/abouticon"
+                        android:layout_width="122dp"
+                        android:layout_height="108dp"
+                        android:layout_centerInParent="true"
+                        android:src="@drawable/aboutus" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -254,10 +229,10 @@
 
                     <ImageView
                         android:id="@+id/exiticon"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="122dp"
+                        android:layout_height="108dp"
                         android:layout_centerInParent="true"
-                        android:src="@drawable/ic_exit_to_app_black_24dp" />
+                        android:src="@drawable/exit" />
 
                     <TextView
                         android:layout_width="wrap_content"
