--- a/app/src/main/res/layout/lunch_items.xml
+++ b/app/src/main/res/layout/lunch_items.xml
@@ -11,13 +11,13 @@
     >
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         >
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="160dp"
             android:id="@+id/lunch_image"
-            android:src="@drawable/lunch"
+            android:src="@drawable/breakfast"
             android:scaleType="centerCrop"/>
         <TextView
             android:layout_width="match_parent"
@@ -28,7 +28,7 @@
             android:background="@color/GreenYellow"
             android:textSize="20sp"
             android:gravity="center"
-            android:layout_alignParentBottom="true"/>
+            android:layout_below="@id/lunch_image"/>
     </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
