--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -9,10 +9,8 @@
     <ImageView
         android:layout_width="match_parent"
         android:id="@+id/splash"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="0dp"
-        android:layout_marginBottom="0dp"
-        android:layout_height="wrap_content"
-        android:src="@drawable/splash"/>
+        android:layout_height="match_parent"
+        android:src="@drawable/splash"
+        android:scaleType="centerCrop"/>
 
 </RelativeLayout>
