--- a/app/src/main/res/layout/activity_breakfast.xml
+++ b/app/src/main/res/layout/activity_breakfast.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context=".activities.BreakfastActivity"
     android:orientation="vertical">
     <com.google.android.material.appbar.AppBarLayout
@@ -27,25 +28,19 @@
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
         android:layout_below="@+id/appbar"/>
-
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
+        android:id="@+id/fabbreakfast"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_gravity="bottom|end"
-        android:layout_marginStart="348dp"
-        android:layout_marginLeft="348dp"
-        android:layout_marginTop="665dp"
         android:layout_marginEnd="7dp"
         android:layout_marginRight="7dp"
         android:layout_marginBottom="10dp"
         android:backgroundTint="@color/White"
-        app:srcCompat="@drawable/ic_shopping_cart_black_24dp"
-        tools:ignore="UnusedAttribute,VectorDrawableCompat" />
+        app:srcCompat="@drawable/cart"
+        tools:ignore="UnusedAttribute,VectorDrawableCompat"
+        />
+
 </RelativeLayout>
