--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,8 +5,8 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     android:fitsSystemWindows="true"
-    android:background="@drawable/raspberry"
     android:alpha="0.8"
     tools:openDrawer="start">
 
@@ -17,9 +17,10 @@
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nv"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="start"
         app:headerLayout="@layout/nav_header"
+        android:background="@drawable/nav"
         app:menu="@menu/navigation_menu">
 
     </com.google.android.material.navigation.NavigationView>
