--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/login"
     android:layout_height="match_parent"
     tools:context=".activities.Login">
 
@@ -23,8 +24,8 @@
             android:layout_height="wrap_content"
             android:hint="Enter E-Mail"
             android:inputType="textEmailAddress"
-           android:textColor="@color/Black"
-            android:textColorHint="@color/Black"
+           android:textColor="@color/White"
+            android:textColorHint="@color/White"
             android:textSize="24sp"
             app:met_floatingLabel="highlight"
             app:met_singleLineEllipsis="true" />
@@ -35,8 +36,8 @@
             android:layout_height="wrap_content"
             android:hint="Password"
             android:inputType="textPassword"
-            android:textColor="@color/Black"
-            android:textColorHint="@color/Black"
+            android:textColor="@color/White"
+            android:textColorHint="@color/White"
             android:textSize="24sp"
             app:met_floatingLabel="highlight"
             app:met_singleLineEllipsis="true" />
@@ -60,7 +61,7 @@
         android:layout_marginBottom="26dp"
         android:text="Dont have an account? Sign Up"
         android:textColor="@color/Black"
-        app:cornerRadius="4dp" />
+         />
 
     <Button
         android:id="@+id/btnsignin"
@@ -79,7 +80,7 @@
         android:background="@color/DeepSkyBlue"
         android:text="Sign In"
         android:textColor="@color/Black"
-        app:cornerRadius="4dp" />
+        />
 
 
 </RelativeLayout>
