--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/signup"
     android:fitsSystemWindows="true"
     tools:context=".activities.ProfileActivity">
 <!--    <androidx.appcompat.widget.Toolbar-->
