--- a/app/src/main/res/layout/activity_soft_drinks.xml
+++ b/app/src/main/res/layout/activity_soft_drinks.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
-    tools:context=".activities.LunchActivity"
+    tools:context=".activities.SoftDrinksActivity"
+  android:background="@drawable/background"
     android:orientation="vertical">
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -23,15 +23,16 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_lunch"
+        android:id="@+id/recycler_drink"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
         android:layout_below="@+id/appbar"/>
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabdrink"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/fablunch"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
@@ -39,7 +40,6 @@
         android:layout_marginRight="7dp"
         android:layout_marginBottom="10dp"
         android:backgroundTint="@color/White"
-        app:srcCompat="@drawable/cart"
-        tools:ignore="UnusedAttribute,VectorDrawableCompat"
-        />
+        app:srcCompat="@drawable/ic_shopping_cart_black_24dp"
+        tools:ignore="UnusedAttribute,VectorDrawableCompat" />
 </RelativeLayout>
