--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -5,6 +5,15 @@ xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:background="@drawable/login"
 android:layout_height="match_parent">
-
+<com.google.android.material.bottomnavigation.BottomNavigationView
+    android:id="@+id/bottom_navigation"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="bottom"
+    app:itemBackground="@color/colorPrimary"
+    app:itemIconTint="@color/White"
+    app:itemTextColor="@color/White"
+    app:menu="@menu/navigation"
+    android:layout_alignParentBottom="true"/>
 
 </RelativeLayout>
