--- a/app/src/main/res/layout/activity_add_menu.xml
+++ b/app/src/main/res/layout/activity_add_menu.xml
@@ -37,21 +37,21 @@
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="Enter menu Id"
+            android:hint="Enter breakfast Id"
             android:textColorHint="@color/Black"
             android:id="@+id/etmenuid"
             />
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="Enter menu Price"
+            android:hint="Enter breakfast Price"
             android:textColorHint="@color/Black"
             android:id="@+id/etmenuprice"
             />
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="Enter menu Description"
+            android:hint="Enter breakfast Description"
             android:textColorHint="@color/Black"
             android:id="@+id/etmenudescription"
             />
