--- a/app/src/main/res/layout/activity_food_detail.xml
+++ b/app/src/main/res/layout/activity_food_detail.xml
@@ -1,73 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.FoodDetail">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/app_bar_layout"
+<!--    <com.google.android.material.appbar.AppBarLayout-->
+<!--        android:id="@+id/app_bar_layout"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="350dp"-->
+<!--        android:fitsSystemWindows="true">-->
+    <RelativeLayout
+        android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
-        android:layout_height="350dp"
-        android:fitsSystemWindows="true">
-<!--        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"-->
+        android:layout_height="300dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Food Name"
-        android:textSize="30dp"
-        android:gravity="center"
-        android:id="@+id/food_name"/>
-
-
-    <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/food_image"
-                android:contentDescription="@null"
-                android:scaleType="centerCrop"
-                app:layout_collapseMode="parallax"/>
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/btnfood"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="bottom|right|end"
-        android:layout_marginEnd="-2dp"
-        android:layout_marginRight="-2dp"
-        android:backgroundTint="@color/White"
-        app:elevation="6dp"
-        app:layout_anchorGravity="bottom|right|end"
-        app:pressedTranslationZ="12dp"
-        app:srcCompat="@drawable/ic_shopping_cart_black_24dp"
-        app:useCompatPadding="true"
-        tools:ignore="RtlHardcoded,UnusedAttribute,VectorDrawableCompat" />
-
-</RelativeLayout>
-
-
-    </com.google.android.material.appbar.AppBarLayout>
-
-    <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/nestedscrollview"
-        android:clipToPadding="false"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-        <LinearLayout
+        <TextView
+            android:id="@+id/food_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="16dp">
+            android:gravity="center"
+            android:text="Food Name"
+            android:textSize="30dp" />
+
+        <ImageView
+            android:id="@+id/food_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="@null"
+            android:src="@drawable/strawberry"
+            android:scaleType="centerCrop"
+            app:layout_collapseMode="parallax" />
+        <LinearLayout
+            android:id="@+id/layout_price"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/squarebackground"
+            android:layout_gravity="left"
+            android:layout_weight="1"
+            android:layout_alignParentBottom="true"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
+                android:text="Ksh."
+                android:textSize="24sp"
+                android:textColor="@color/Black"
+                android:textStyle="bold"
+                />
+
+            <TextView
+                android:id="@+id/food_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_weight="9"
+                android:text="1,000"
+                android:textColor="@color/Black"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+    </RelativeLayout>
+<!--    </com.google.android.material.appbar.AppBarLayout>-->
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        app:cardCornerRadius="30dp"
+        app:cardElevation="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
+        app:layout_constraintVertical_bias="0.0">
+
+        <androidx.core.widget.NestedScrollView
+            android:id="@+id/nestedscrollview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
+            android:clipToPadding="false"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:orientation="horizontal">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -75,77 +104,76 @@
                     android:orientation="vertical"
                     android:weightSum="2">
 
+
+
                     <LinearLayout
-                        android:id="@+id/layout_price"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/layout_increment"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
+                        android:layout_gravity="left"
                         android:layout_weight="1"
-                        android:layout_gravity="left">
-
-                        <ImageView
-                            android:layout_width="36dp"
-                            android:layout_height="36dp"
-                            android:layout_gravity="left"
-                            android:layout_marginStart="8dp"
-                            android:layout_marginLeft="8dp"
-                            android:src="@drawable/ic_monetization_on_black_24dp"
-                            tools:ignore="RtlHardcoded" />
-
+                        android:orientation="vertical">
                         <TextView
-                            android:id="@+id/food_price"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="8dp"
-                            android:layout_weight="9"
-                            android:text="1,000"
+                            android:text="Quantity"
+                            android:textSize="20sp"
                             android:textColor="@color/Black"
-                            android:textSize="24sp"
-                            android:textStyle="bold"
-                            android:layout_marginLeft="8dp"/>
-                    </LinearLayout>
-                        <LinearLayout
-                            android:id="@+id/layout_increment"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal"
-                            android:layout_weight="1"
-                            android:layout_gravity="left">
+                            android:layout_gravity="center"
+                            android:id="@+id/tvquantity"/>
+
 
                         <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
                             android:id="@+id/number_button"
                             android:layout_width="160dp"
                             android:layout_height="50dp"
-                            android:layout_marginStart="8dp"
-                            android:layout_marginLeft="8dp"
-                            app:backGroundColor="@color/Green"
+                            app:backGroundColor="@color/colorPrimary"
+                            android:layout_gravity="center"
                             app:finalNumber="20"
                             app:initialNumber="1"
-                            app:textSize="12sp" />
+                            app:textSize="12sp"
+                            android:layout_marginTop="10dp"/>
 
                     </LinearLayout>
+
                     <LinearLayout
                         android:id="@+id/layout_description"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:orientation="vertical"
+                        android:layout_gravity="left"
                         android:layout_weight="1"
-                        android:layout_gravity="left">
+                        android:orientation="vertical">
 
-                      <TextView
-                          android:layout_width="match_parent"
-                          android:layout_height="match_parent"
-                          android:id="@+id/tvdescription"
-                          android:text="Description of the Food"
-                          android:textColor="@color/Black"
-                          android:textSize="20dp"/>
+                        <Button
+                            android:id="@+id/btnaddtocart"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:text="Add to Cart"
+                            android:textColor="@color/Green"
+                            style="@style/Widget.AppCompat.Button.Borderless"
+                           android:layout_marginTop="10dp"
+                            android:textSize="18sp"
+                            />
 
                     </LinearLayout>
 
                 </LinearLayout>
-                 </LinearLayout>
-    </androidx.core.widget.NestedScrollView>
+            </LinearLayout>
+        </androidx.core.widget.NestedScrollView>
+    </androidx.cardview.widget.CardView>
 
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        app:itemBackground="@color/colorPrimary"
+        app:itemIconTint="@color/White"
+        app:itemTextColor="@color/White"
+        app:menu="@menu/navigation"
+        android:layout_alignParentBottom="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
