--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,88 +6,19 @@
     android:background="@drawable/login"
     android:layout_height="match_parent"
     tools:context=".activities.Login">
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardCornerRadius="40dp"
-        android:layout_marginTop="150dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        >
-    <LinearLayout
-        android:id="@+id/linearsignin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="10dp"
-        android:orientation="vertical">
 
-        <com.rengwuxian.materialedittext.MaterialEditText
-            android:id="@+id/edtemail"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Enter E-Mail"
-            android:inputType="textEmailAddress"
-           android:textColor="@color/Black"
-            android:textColorHint="@color/Black"
-            android:textSize="24sp"
-            app:met_floatingLabel="highlight"
-            app:met_singleLineEllipsis="true" />
-
-        <com.rengwuxian.materialedittext.MaterialEditText
-            android:id="@+id/edtpassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Password"
-            android:inputType="textPassword"
-            android:textColor="@color/Black"
-            android:textColorHint="@color/Black"
-            android:textSize="24sp"
-            app:met_floatingLabel="highlight"
-            app:met_singleLineEllipsis="true" />
-        <Button
-            android:id="@+id/btnsignin"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginStart="18dp"
-            android:layout_marginLeft="18dp"
-            android:layout_marginTop="13dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginRight="20dp"
-            android:background="@color/DeepSkyBlue"
-            android:text="Sign In"
-            android:textColor="@color/Black"
-            />
-
-    <Button
-        android:id="@+id/btnsignup"
-        style="@style/Widget.AppCompat.Button.Borderless"
-        android:layout_width="285dp"
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/btngooglesignin"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/btnsignin"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginStart="18dp"
-        android:layout_marginLeft="18dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="43dp"
-        android:layout_marginRight="43dp"
-        android:layout_marginBottom="26dp"
-        android:text="Dont have an account? Sign Up"
-        android:textColor="@color/Black"
-         />
-
-
-    </LinearLayout>
-    </androidx.cardview.widget.CardView>
-
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginEnd="37dp"
+        android:layout_marginRight="37dp"
+        android:layout_marginTop="280dp"/>
 
 </RelativeLayout>
