--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    android:fitsSystemWindows="true"
-    android:alpha="0.8"
-    tools:openDrawer="start">
+    android:alpha="0.8">
 
 <ScrollView
     android:layout_width="match_parent"
@@ -16,25 +14,6 @@
     android:background="@drawable/signup"
     android:fitsSystemWindows="true"
     tools:context=".activities.ProfileActivity">
-<!--    <androidx.appcompat.widget.Toolbar-->
-<!--        android:id="@+id/toolbar"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="?attr/actionBarSize"-->
-<!--        android:background="?attr/colorPrimary"-->
-<!--        app:popupTheme="@style/AppTheme.PopupOverlay" />-->
-
-
-        <com.google.android.material.navigation.NavigationView
-            android:id="@+id/nv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left"
-            android:foreground="?attr/selectableItemBackground"
-            app:itemIconTint="@android:color/black"
-            app:itemTextColor="@android:color/black"
-            app:headerLayout="@layout/nav_header"
-            android:background="@drawable/nav"
-            app:menu="@menu/navigation_menu"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -43,9 +22,6 @@
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:paddingTop="16dp">
-
-
-
         <EditText
             android:id="@+id/old_email"
             android:layout_width="match_parent"
@@ -176,4 +152,14 @@
     </LinearLayout>
 
 </ScrollView>
-</androidx.drawerlayout.widget.DrawerLayout>
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        app:itemBackground="@color/colorPrimary"
+        app:itemIconTint="@color/White"
+        app:itemTextColor="@color/White"
+        app:menu="@menu/navigation"
+        android:layout_alignParentBottom="true"/>
+</RelativeLayout>
