--- a/app/src/main/res/layout/order_layout.xml
+++ b/app/src/main/res/layout/order_layout.xml
@@ -22,6 +22,11 @@
             android:layout_height="wrap_content"
             android:layout_weight="9"
             android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_weight="9">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -30,9 +35,19 @@
                 android:textAllCaps="true"
                 android:textStyle="bold"
                 android:textSize="20sp"
+                android:layout_weight="2"
                 android:layout_marginLeft="10dp"
                 android:gravity="center_vertical|start"
                 android:layout_marginStart="10dp" />
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_gravity="right|end"
+                    android:layout_marginRight="16dp"
+                    android:id="@+id/imgorder"
+
+                    />
+            </LinearLayout>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
