--- a/app/src/main/res/layout/softdrinks_items.xml
+++ b/app/src/main/res/layout/softdrinks_items.xml
@@ -3,35 +3,56 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    app:cardElevation="4dp"
-    android:id="@+id/cvdrinkitem"
-    android:layout_marginBottom="8dp"
-    android:layout_marginTop="8dp"
+    app:cardElevation="0dp"
+    android:id="@+id/cvdrinkItem"
     android:layout_marginLeft="8dp"
     android:layout_marginRight="8dp"
-    >
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="200dp"
-            android:id="@+id/drink_image"
-            android:src="@drawable/breakfast"
-            android:scaleType="centerCrop"/>
+    android:layout_marginBottom="8dp"
+    android:layout_marginTop="8dp"
+    app:cardBackgroundColor="@android:color/transparent">
+
+
+    <LinearLayout
+        android:layout_width="80dp"
+        android:layout_height="90dp"
+        android:orientation="vertical"
+        android:layout_gravity="center">
+
+
+        <RelativeLayout
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:id="@+id/cvdrinkItem"
+            android:background="@drawable/roundedbackground"
+            android:layout_gravity="center">
+
+            <ImageView
+                android:id="@+id/drink_image"
+                android:layout_width="24dp"
+                android:layout_height="34dp"
+                android:scaleType="centerCrop"
+                android:background="@drawable/roundedbackground"
+                android:src="@drawable/raspberry"
+                android:layout_centerInParent="true"/>
+
+
+        </RelativeLayout>
+
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/drink_name"
-            android:text="Name"
+            android:text="Drink"
             android:textColor="@color/Black"
-            android:background="@color/GreenYellow"
-            android:textSize="20sp"
-            android:gravity="center"
-            android:layout_below="@id/drink_image"/>
-          </RelativeLayout>
+            android:background="@color/White"
+            android:textSize="12sp"
+            android:layout_gravity="center"
+            android:layout_below="@+id/drink_image"
+            android:layout_marginTop="8dp"
+            />
+    </LinearLayout>
+
 
 </androidx.cardview.widget.CardView>
