--- a/app/src/main/res/layout/activity_edit_orders.xml
+++ b/app/src/main/res/layout/activity_edit_orders.xml
@@ -12,6 +12,19 @@
         android:layout_height="match_parent"
         android:background="@color/fbutton_color_transparent"
         android:id="@+id/listorders"/>
-
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom"
+        app:itemBackground="@color/colorPrimary"
+        app:itemIconTint="@color/White"
+        app:itemTextColor="@color/White"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/navigation" />
 
 </RelativeLayout>
