--- a/app/src/main/res/drawable/roundedbackground.xml
+++ b/app/src/main/res/drawable/roundedbackground.xml
@@ -4,5 +4,5 @@
     android:shape="oval"
     >
     <solid
-        android:color="#8FBC8F"/>
+        android:color="@color/colorPrimary"/>
 </shape>
