--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -10,7 +10,7 @@
     <ScrollView
         android:id="@+id/scrollcart"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="450dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -33,7 +33,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        app:cardBackgroundColor="@color/colorPrimary"
+        app:cardBackgroundColor="@color/colorPrimaryDark"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scrollcart">
@@ -64,31 +64,19 @@
                     android:text="0.00"
                     android:textColor="@color/White"
                     android:textSize="24sp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/laylocation"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/laytotal"
-                android:layout_margin="8dp"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
                 <TextView
                     android:id="@+id/txtLocationResult"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/White"
-                    android:textSize="24sp"
-                    android:visibility="visible" />
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="24sp"/>
             </LinearLayout>
 
             <Button
                 android:id="@+id/btnplaceorder"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/laylocation"
+                android:layout_below="@+id/laytotal"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentEnd="true"
