--- a/app/src/main/res/layout/activity_user_dashboard.xml
+++ b/app/src/main/res/layout/activity_user_dashboard.xml
@@ -1,41 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/background"
-    tools:context=".activities.UserDashboard">
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:background="@drawable/background"
+tools:context=".activities.UserDashboard">
 
-       <LinearLayout
-            android:id="@+id/linearLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+<LinearLayout
+android:id="@+id/linearLayout"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:orientation="vertical"
+app:layout_constraintEnd_toEndOf="parent"
+app:layout_constraintStart_toStartOf="parent"
+app:layout_constraintTop_toTopOf="parent">
 
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardViewtop"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                app:cardBackgroundColor="@android:color/transparent">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
-
+                <LinearLayout
+                    android:layout_width="280dp"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/recycler_category"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:scrollbars="horizontal"
+                        />
+                </LinearLayout>
                                <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="8dp"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:layout_gravity="end">
 
                         <ImageView
                             android:id="@+id/imgudprifile"
@@ -50,22 +57,30 @@
                             android:text="John Doe"
                             android:textStyle="italic"
                             android:textSize="15dp"
+                            android:layout_gravity="center"
                             android:textColor="@color/Black"/>
+                                   <LinearLayout
+                                       android:layout_width="match_parent"
+                                       android:layout_height="wrap_content"
+                                       android:orientation="horizontal">
  <ImageView
 android:id="@+id/tvedit"
- android:layout_width="wrap_content"
-android:layout_height="wrap_content"
- android:src="@drawable/pencil"
+ android:layout_width="30dp"
+android:layout_height="30dp"
+ android:src="@drawable/pen"
+android:background="@android:color/transparent"
 />
  <ImageView
  android:id="@+id/tvsignout"
  android:layout_width="30dp"
  android:layout_height="30dp"
+     android:layout_marginLeft="5dp"
      android:src="@drawable/exit"
 android:textAllCaps="true"
 android:textSize="15dp"
      android:textColor="@color/colorPrimary"
      android:clickable="true"/>
+                                   </LinearLayout>
 
                     </LinearLayout>
 
@@ -77,46 +92,38 @@ android:textSize="15dp"
                     </LinearLayout>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
-
-
-            <androidx.core.widget.NestedScrollView
-                android:id="@+id/nested"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="50dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/cardViewtop">
-
                 <androidx.cardview.widget.CardView
                     android:id="@+id/cardviewbreakfast"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    app:cardBackgroundColor="@android:color/transparent">
+                    app:cardBackgroundColor="@android:color/transparent"
+                    android:layout_marginBottom="55dp">
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/recycler_breakfastdash"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:paddingBottom="16dp" />
+                        android:layout_height="wrap_content"
+                        android:paddingBottom="16dp"
+                        android:scrollbars="vertical"/>
 
                 </androidx.cardview.widget.CardView>
-            </androidx.core.widget.NestedScrollView>
+<!--           </androidx.core.widget.NestedScrollView>-->
 
         </LinearLayout>
 
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottom_navigation"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            app:itemBackground="@color/colorPrimary"
-            app:itemIconTint="@color/White"
-            app:itemTextColor="@color/White"
-            app:menu="@menu/navigation"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        app:itemBackground="@color/colorPrimary"
+        app:itemIconTint="@color/White"
+        app:itemTextColor="@color/White"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/navigation" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
