--- a/app/src/main/res/layout/breakfast_items.xml
+++ b/app/src/main/res/layout/breakfast_items.xml
@@ -1,55 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:cardElevation="0dp"
-    android:id="@+id/cvbreakfastitem"
-    android:layout_marginBottom="8dp"
-    android:layout_marginRight="8dp"
-    android:layout_marginLeft="8dp"
-    android:layout_marginTop="8dp"
-    app:cardBackgroundColor="@android:color/transparent">
-    <LinearLayout
+    android:layout_height="wrap_content">
+
+    <ImageView
+        android:elevation="12dp"
+        android:id="@+id/breakfast_image"
+        android:layout_width="100dp"
+        android:layout_height="110dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="0dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/breakfast"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cvbreakfastitem"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_gravity="center">
-    <RelativeLayout
-        android:layout_width="130dp"
-        android:layout_height="130dp"
-        android:id="@+id/cvbreakfastItem"
-        android:background="@drawable/squarebackground"
-        android:layout_gravity="center">
-        <ImageView
+        android:layout_height="110dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginRight="10dp"
+        android:backgroundTint="@color/White"
+        app:cardElevation="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            android:id="@+id/breakfast_image"
-            android:src="@drawable/breakfast"
-            android:layout_centerInParent="true"/>
-    </RelativeLayout>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/breakfast_name"
-            android:text="Breakfast"
-            android:textColor="@color/Black"
-            android:textSize="20sp"
-             android:layout_gravity="center_horizontal"
-            android:layout_below="@id/breakfast_image"
-           />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/breakfast_price"
-            android:text="Price"
-            android:textColor="@color/Black"
-            android:textSize="20sp"
-            android:layout_gravity="center_horizontal"
-            android:layout_below="@id/breakfast_image"
-            />
-    </LinearLayout>
+            android:orientation="vertical">
 
-</androidx.cardview.widget.CardView>
+            <TextView
+                android:id="@+id/breakfast_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/breakfast_image"
+                android:layout_gravity="center_horizontal"
+                android:text="Breakfast"
+                android:textColor="@color/Black"
+                android:textSize="20sp"
+                android:layout_marginLeft="10dp"/>
+
+            <TextView
+                android:id="@+id/breakfast_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/breakfast_image"
+                android:layout_gravity="center_horizontal"
+                android:text="Price"
+                android:textColor="@color/Black"
+                android:textSize="20sp"
+                android:layout_marginLeft="10dp"/>
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
