--- a/app/src/main/res/layout/category_items.xml
+++ b/app/src/main/res/layout/category_items.xml
@@ -30,8 +30,8 @@
 
             <ImageView
                 android:id="@+id/category_image"
-                android:layout_width="24dp"
-                android:layout_height="34dp"
+                android:layout_width="34dp"
+                android:layout_height="44dp"
                 android:scaleType="centerCrop"
                 android:background="@drawable/roundedbackground"
                 android:src="@drawable/raspberry"
@@ -46,13 +46,21 @@
           android:id="@+id/category_name"
           android:text="Category"
           android:textColor="@color/Black"
-          android:background="@color/White"
+          android:background="@android:color/transparent"
           android:textSize="12sp"
           android:layout_gravity="center"
           android:layout_below="@+id/category_image"
           android:layout_marginTop="8dp"
           />
     </LinearLayout>
+    <ImageView
+        android:id="@+id/imgcheck"
+        android:layout_width="24dp"
+        android:layout_height="34dp"
+        android:layout_gravity="right|top"
+        android:layout_marginLeft="20dp"
+        android:src="@drawable/check"
+        android:layout_centerInParent="true"/>
 
 
     </androidx.cardview.widget.CardView>
