--- a/app/src/main/res/layout/softdrinks_items.xml
+++ b/app/src/main/res/layout/softdrinks_items.xml
@@ -2,57 +2,53 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardElevation="0dp"
     android:id="@+id/cvdrinkItem"
-    android:layout_marginLeft="8dp"
-    android:layout_marginRight="8dp"
     android:layout_marginBottom="8dp"
+    android:layout_marginRight="8dp"
+    android:layout_marginLeft="8dp"
     android:layout_marginTop="8dp"
     app:cardBackgroundColor="@android:color/transparent">
-
-
     <LinearLayout
-        android:layout_width="80dp"
-        android:layout_height="90dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_gravity="center">
-
-
         <RelativeLayout
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:id="@+id/cvdrinkItem"
-            android:background="@drawable/roundedbackground"
+            android:layout_width="130dp"
+            android:layout_height="130dp"
+            android:background="@drawable/squarebackground"
             android:layout_gravity="center">
-
             <ImageView
-                android:id="@+id/drink_image"
-                android:layout_width="24dp"
-                android:layout_height="34dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:scaleType="centerCrop"
-                android:background="@drawable/roundedbackground"
-                android:src="@drawable/raspberry"
+                android:id="@+id/drink_image"
+                android:src="@drawable/breakfast"
                 android:layout_centerInParent="true"/>
-
-
         </RelativeLayout>
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/drink_name"
-            android:text="Drink"
+            android:text="Drink Name"
             android:textColor="@color/Black"
-            android:background="@color/White"
-            android:textSize="12sp"
-            android:layout_gravity="center"
-            android:layout_below="@+id/drink_image"
-            android:layout_marginTop="8dp"
+            android:textSize="20sp"
+            android:layout_gravity="center_horizontal"
+            android:layout_below="@id/breakfast_image"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/etdrinkprice"
+            android:text="Price"
+            android:textColor="@color/Black"
+            android:textSize="20sp"
+            android:layout_gravity="center_horizontal"
+            android:layout_below="@id/breakfast_image"
             />
     </LinearLayout>
-
 
 </androidx.cardview.widget.CardView>
