--- a/app/src/main/res/layout/welcome_side4.xml
+++ b/app/src/main/res/layout/welcome_side4.xml
@@ -14,7 +14,7 @@
         <ImageView
             android:layout_width="@dimen/img_width_height"
             android:layout_height="@dimen/img_width_height"
-            android:src="@drawable/deliver" />
+            android:src="@drawable/motorcycle" />
 
         <TextView
             android:layout_width="wrap_content"
