--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -10,7 +10,7 @@ android:layout_height="match_parent">
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="bottom"
-    app:itemBackground="@color/colorPrimary"
+    android:background="@color/colorPrimary"
     app:itemIconTint="@color/White"
     app:itemTextColor="@color/White"
     app:menu="@menu/navigation"
