--- a/app/src/main/res/layout/activity_user_dashboard.xml
+++ b/app/src/main/res/layout/activity_user_dashboard.xml
@@ -26,11 +26,13 @@ app:layout_constraintTop_toTopOf="parent">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:weightSum="1">
                 <LinearLayout
                     android:layout_width="280dp"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:layout_weight="0.8">
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/recycler_category"
                         android:layout_width="wrap_content"
@@ -42,7 +44,8 @@ app:layout_constraintTop_toTopOf="parent">
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        android:layout_gravity="end">
+                        android:layout_gravity="right"
+                                   android:gravity="right">
 
                         <ImageView
                             android:id="@+id/imgudprifile"
@@ -54,7 +57,7 @@ app:layout_constraintTop_toTopOf="parent">
                             android:id="@+id/tvprofilename"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="John Doe"
+                            android:text="Joseph"
                             android:textStyle="italic"
                             android:textSize="15dp"
                             android:layout_gravity="center"
@@ -65,15 +68,15 @@ app:layout_constraintTop_toTopOf="parent">
                                        android:orientation="horizontal">
  <ImageView
 android:id="@+id/tvedit"
- android:layout_width="30dp"
-android:layout_height="30dp"
+ android:layout_width="27dp"
+android:layout_height="27dp"
  android:src="@drawable/pen"
 android:background="@android:color/transparent"
 />
  <ImageView
  android:id="@+id/tvsignout"
- android:layout_width="30dp"
- android:layout_height="30dp"
+ android:layout_width="27dp"
+ android:layout_height="27dp"
      android:layout_marginLeft="5dp"
      android:src="@drawable/exit"
 android:textAllCaps="true"
@@ -116,7 +119,7 @@ android:textSize="15dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        app:itemBackground="@color/colorPrimary"
+       android:background="@color/colorPrimary"
         app:itemIconTint="@color/White"
         app:itemTextColor="@color/White"
         app:layout_constraintBottom_toBottomOf="parent"
