--- a/app/src/main/res/layout/order_layout.xml
+++ b/app/src/main/res/layout/order_layout.xml
@@ -111,7 +111,8 @@
                     android:layout_marginRight="16dp"
                     android:src="@drawable/telephone"
                     android:id="@+id/contact"
-                    />
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginLeft="70dp" />
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="30dp"
