--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -23,10 +23,10 @@
         <item name="android:textColor">@color/White</item>
         <item name="android:textStyle">normal</item>
     </style>
-    <style name="ExpandedAppbar" parent="@style/TextAppearance.AppCompat.Title">
-        <item name="android:textColor">@color/colorPrimary</item>
-        <item name="android:textStyle">normal</item>
-    </style>
+<!--    <style name="ExpandedAppbar" parent="@style/TextAppearance.AppCompat.Title">-->
+<!--        <item name="android:textColor">@color/colorPrimary</item>-->
+<!--        <item name="android:textStyle">normal</item>-->
+<!--    </style>-->
 
     <style name="MyCardView" parent="@style/Widget.MaterialComponents.CardView">
         <item name="shapeAppearanceOverlay">@style/ShapeAppearanceOverlay.MaterialCardView.Cut</item>
