--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -7,32 +7,40 @@
     android:background="@drawable/background"
     tools:context=".activities.CartActivity">
 
-    <LinearLayout
+    <RelativeLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/background"
         android:orientation="vertical"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginBottom="60dp"
-        android:background="@drawable/background">
+        android:layout_marginBottom="60dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="400dp"
+            android:orientation="vertical"
+            android:id="@+id/layres"
+            android:layout_marginTop="10dp">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/listcart"
             android:layout_width="match_parent"
-            android:layout_height="480dp"
+            android:layout_height="match_parent"
             android:padding="32dp"
-            android:scrollbars="vertical"
-            android:layout_marginTop="10dp"/>
+            android:scrollbars="vertical" />
+        </LinearLayout>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
-            app:cardBackgroundColor="@color/colorPrimary"
-            android:layout_gravity="bottom">
+            android:layout_alignParentBottom="true"
+            app:cardBackgroundColor="@color/colorPrimary">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -90,7 +98,8 @@
 
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
-    </LinearLayout>
+    </RelativeLayout>
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
