--- a/app/src/main/res/layout/activity_edit_orders.xml
+++ b/app/src/main/res/layout/activity_edit_orders.xml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/fbutton_color_transparent"
-        android:id="@+id/listorders"/>
+        android:id="@+id/listorders"
+        android:layout_marginBottom="60dp"/>
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
